style(responsive): resolve text and skills clipping on What I Do tabs on hover

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -34,7 +34,7 @@
 }
 .what-box-in {
   flex-direction: column;
-  height: 500px;
+  height: 580px;
   margin-left: 200px;
   position: relative;
   display: none;
@@ -52,14 +52,14 @@
 
 .what-noTouch:hover,
 .what-content-active {
-  min-height: 67%;
-  padding: 40px 50px;
+  min-height: 80%;
+  padding: 30px 50px;
 }
 
 .what-noTouch:hover ~ .what-content,
 .what-box-in:hover .what-noTouch:not(:hover),
 .what-content.what-sibling {
-  min-height: 33%;
+  min-height: 20%;
   padding: 10px 50px;
 }
 .what-content h3 {
@@ -181,9 +181,9 @@
 }
 .what-border1 svg {
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 450px;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .what-border2 {
   position: absolute;
@@ -199,10 +199,10 @@
   animation: whatBorders 1.2s 1 forwards;
 }
 .what-border2 svg {
-  height: 500px;
-  top: 50%;
-  transform: translateY(-50%);
+  height: 100%;
+  top: 0;
   position: absolute;
+  width: 100%;
 }
 .what-content-in {
   height: 100%;
@@ -249,7 +249,7 @@
     margin-right: 20%;
   }
   .what-box-in {
-    height: 400px;
+    height: 480px;
   }
   .what-content h3 {
     font-size: 28px;
@@ -263,7 +263,7 @@
   }
   .what-noTouch:hover,
   .what-content-active {
-    padding: 20px 30px;
+    padding: 15px 30px;
   }
 
   .what-noTouch:hover ~ .what-content,
@@ -290,7 +290,7 @@
     padding-bottom: 50px;
   }
   .what-box-in {
-    height: 500px;
+    height: 580px;
     margin-left: -50px;
   }
   .what-content {
@@ -302,14 +302,14 @@
   }
   .what-noTouch:hover,
   .what-content-active {
-    min-height: 67%;
-    padding: 50px;
+    min-height: 80%;
+    padding: 30px 50px;
   }
 
   .what-noTouch:hover ~ .what-content,
   .what-box-in:hover .what-noTouch:not(:hover),
   .what-content.what-sibling {
-    min-height: 33%;
+    min-height: 20%;
     padding: 10px 50px;
   }
 }
@@ -326,7 +326,7 @@
     justify-content: left;
   }
   .what-box:last-child {
-    height: 500px;
+    height: 550px;
   }
   .what-box {
     width: 500px;
@@ -338,7 +338,7 @@
   }
   .what-box-in {
     margin-left: 0px;
-    height: 450px;
+    height: 500px;
   }
   .what-content h5,
   .what-content-flex {
@@ -383,6 +383,12 @@
   .what-box {
     max-width: calc(100% - 25px);
     margin: 0;
+  }
+  .what-box:last-child {
+    height: 600px;
+  }
+  .what-box-in {
+    height: 550px;
   }
 }
 @media only screen and (min-width: 1950px) {
